# bunnylogs-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/bunnylogs/: __init__.py  handler.py  tail.py
