[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bunnylogs"
version = "0.1.2"
description = "Python logging handler for BunnyLogs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["certifi"]
keywords = ["logging", "bunnylogs", "log handler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://bunnylogs.com"
Repository = "https://github.com/RubenNorgaard/bunnylogs-python"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnylogs"]
